# casarrubios-project

./: .gitattributes  .gitignore  LICENSE  README.md  TODO.md
doc/: angular-changes.md  (+7 more)
project/recruiters/backend/services/applications-service/: .gitignore  Dockerfile  build-image.sh  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  requirements.txt  run_local.sh  sonar-project.properties
project/recruiters/backend/services/applications-service/app/: main.py
project/recruiters/backend/services/applications-service/app/api/: applications.py
project/recruiters/backend/services/applications-service/app/api/dto/: models.py
project/recruiters/backend/services/applications-service/app/core/: config.py  logger.py
project/recruiters/backend/services/applications-service/app/db/: models.py  repositories.py
project/recruiters/backend/services/applications-service/app/services/: application_service.py
project/recruiters/backend/services/applications-service/app/services/models/: PaginatedResult.py
project/recruiters/backend/services/applications-service/postgresql/: inventory.sql
project/recruiters/backend/services/applications-service/resources/: applications-service-openapi.yaml
project/recruiters/backend/services/applications-service/sql/: init.sql
project/recruiters/backend/services/applications-service/src/: main.py
project/recruiters/backend/services/applications-service/src/adapters/cvfiles/: minio_cv_service.py
project/recruiters/backend/services/applications-service/src/adapters/db/: models.py  repositories.py
project/recruiters/backend/services/applications-service/src/domain/exceptions/: CVException.py
project/recruiters/backend/services/applications-service/src/domain/models/: application_scoring.py  applications_model.py  paginated_result.py
project/recruiters/backend/services/applications-service/src/domain/services/: application_service.py
project/recruiters/backend/services/applications-service/src/infrastructure/app/: dependencies.py
project/recruiters/backend/services/applications-service/src/infrastructure/core/: config.py
project/recruiters/backend/services/applications-service/src/infrastructure/kafka/: kafka_consumer.py  kafka_producer.py
project/recruiters/backend/services/applications-service/src/infrastructure/minio/: MinioClient.py
project/recruiters/backend/services/applications-service/src/infrastructure/tracing/: otel_tracing.py
project/recruiters/backend/services/applications-service/tests/: application_test.py  conftest.py  database_test.py  test_utils.py
project/recruiters/backend/services/applications-service/tests/sql/: init.sql
project/recruiters/backend/services/scoring-service/: Dockerfile  build-image.sh  pom.xml  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties
project/recruiters/backend/services/scoring-service/src/: config.py  main.py
project/recruiters/backend/services/scoring-service/src/domain/model/: application_analysis.py  application_scoring.py  position.py
project/recruiters/backend/services/scoring-service/src/domain/services/: scoring_service.py
project/recruiters/backend/services/scoring-service/src/infrastructure/kafka/: kafka_consumer.py  kafka_producer.py
project/recruiters/backend/services/scoring-service/src/infrastructure/observability/: opentelemetry.py
project/recruiters/backend/services/scoring-service/src/infrastructure/qdrant/: QdrantService.py
project/recruiters/backend/services/scoring-service/tests/integration/: conftest.py  test_application_scoring.py
(+952 files in other folders)
