[tool.poetry]
name = "applications-service"
version = "1.0.0"
description = ""
authors = ["José Alberto Ruiz Casarrubios <jalb80@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
pydantic = "^2.0.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.6"
confluent-kafka = "^2.1.0"
opentelemetry-instrumentation-fastapi = "^0.39b0"
opentelemetry-sdk = "^1.18.0"
python-multipart = "^0.0.6"
minio = "^7.2.0"
docker = "^7.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
testcontainers = "^3.7.1"
kafka-python = "^2.0.2"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88