[tool.poetry]
name = "applications-service"
version = "1.0.0"
description = ""
authors = ["José Alberto Ruiz Casarrubios <jalb80@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
pydantic = "^2.0.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.6"
confluent-kafka = "^2.1.0"
opentelemetry-api = "1.31.1"
opentelemetry-sdk = "1.31.1"
opentelemetry-instrumentation-asyncpg = "0.52b1"
opentelemetry-instrumentation-logging = "0.52b1"
opentelemetry-exporter-otlp = "1.31.1"
opentelemetry-semantic-conventions = "0.52b1"
opentelemetry-distro = "0.52b1"
opentelemetry-instrumentation-sqlalchemy = "0.52b1"
opentelemetry-instrumentation-fastapi = "0.52b1"
opentelemetry-instrumentation-httpx = "0.52b1"
python-multipart = "^0.0.6"
minio = "^7.2.0"
docker = "^7.1.0"
httpx = "^0.27.0"
opentelemetry-instrumentation-kafka-python = "^0.52b1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
testcontainers = "^3.7.1"
kafka-python = "^2.0.2"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88