[tool.poetry]
name = "scoring-service"
version = "1.0.0"
description = ""
authors = ["José Alberto Ruiz Casarrubios <jalb80@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
asyncpg = "0.28.0"
kafka-python = "*"
opentelemetry-api = "1.31.1"
opentelemetry-sdk = "1.31.1"
opentelemetry-instrumentation-asyncpg = "0.52b1"
opentelemetry-instrumentation-logging = "0.52b1"
opentelemetry-exporter-otlp = "1.31.1"
opentelemetry-semantic-conventions = "0.52b1"
pydantic = "*"
confluent-kafka = "*"
openai = "*"
httpx = "*"
numpy = "*"
scikit-learn = "*"
sqlalchemy = "2.0.4"
psycopg2-binary = "2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.0"
pytest-asyncio = "0.21.1"
testcontainers = "3.7.1"
black = "23.7.0"
flake8 = "6.1.0"
mypy = "1.5.1"
isort = "5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88